# survey-telemont

./: .gitignore  README.md  concatenarM.txt  newScriptM.txt  pyproject.toml  requirements.txt  script.py  scriptNetwin.py  survey.csv
M-code/: scriptM.txt
