[project]
name = "automacao-netwin"
version = "0.1.0"
description = "Automação de cadastramento de endereços no sistema netwin."
authors = [
    {name = "geovanecarvalho",email = "geovaneoliveira.75@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "anyio (==4.10.0)",
    "asttokens (==3.0.0)",
    "build (==1.3.0)",
    "cachecontrol (==0.14.3)",
    "certifi (==2025.8.3)",
    "charset-normalizer (==3.4.3)",
    "cleo (==2.1.0)",
    "colorama (==0.4.6)",
    "crashtest (==0.4.1)",
    "decorator (==5.2.1)",
    "distlib (==0.4.0)",
    "dulwich (==0.22.8)",
    "executing (==2.2.1)",
    "fastjsonschema (==2.21.2)",
    "filelock (==3.19.1)",
    "findpython (==0.6.3)",
    "greenlet (==3.2.4)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "installer (==0.7.0)",
    "ipython (==9.5.0)",
    "ipython-pygments-lexers (==1.1.1)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.3.0)",
    "jedi (==0.19.2)",
    "keyring (==25.6.0)",
    "matplotlib-inline (==0.1.7)",
    "more-itertools (==10.8.0)",
    "msgpack (==1.1.1)",
    "packaging (==25.0)",
    "parso (==0.8.5)",
    "pbs-installer (==2025.9.2)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.4.0)",
    "playwright (==1.55.0)",
    "pluggy (==1.6.0)",
    "poetry (==2.1.4)",
    "poetry-core (==2.1.3)",
    "prompt-toolkit (==3.0.52)",
    "pure-eval (==0.2.3)",
    "pyee (==13.0.0)",
    "pygments (==2.19.2)",
    "pyproject-hooks (==1.2.0)",
    "pytest (==8.4.1)",
    "pytest-base-url (==2.1.0)",
    "pytest-playwright (==0.7.0)",
    "python-slugify (==8.0.4)",
    "pywin32-ctypes (==0.2.3)",
    "rapidfuzz (==3.14.1)",
    "requests (==2.32.5)",
    "requests-toolbelt (==1.0.0)",
    "shellingham (==1.5.4)",
    "sniffio (==1.3.1)",
    "stack-data (==0.6.3)",
    "text-unidecode (==1.3)",
    "tomlkit (==0.13.3)",
    "tqdm (==4.67.1)",
    "traitlets (==5.14.3)",
    "trove-classifiers (==2025.9.9.12)",
    "typing-extensions (==4.15.0)",
    "urllib3 (==2.5.0)",
    "virtualenv (==20.32.0)",
    "wcwidth (==0.2.13)",
    "zstandard (==0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
